# Proyecto-MORFEUS

./: .env.example  .gitignore  README.md  pyproject.toml  settings.local.json
colab/: morfeus_colab.ipynb
morfeus/: __init__.py  __main__.py  cli.py  config.py
morfeus/audio/: envelope.py  tts.py
morfeus/script/: generator.py
morfeus/templates/: __init__.py  loader.py
morfeus/templates/abuelita_nieto/: script_demo.json  template.yaml
morfeus/templates/abuelita_nieto/assets/: README.md
morfeus/templates/socrates_skeleton/: script_demo.json  template.yaml
morfeus/templates/socrates_skeleton/assets/: README.md
morfeus/trends/: __init__.py  cache.py  matcher.py  scout.py
morfeus/video/: animate.py  compose.py  lipsync.py  stage.py
