[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morfeus"
version = "0.1.0"
description = "Generador automático de videos virales tipo Sócrates+esqueleto, gratis y en la nube."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Proyecto Morfeus" }]
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "edge-tts>=6.1.10",
    "moviepy>=2.0.0",
    "numpy>=1.24",
    "pillow>=10.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "tenacity>=8.2",
    "rich>=13.7",
]

[project.optional-dependencies]
llm = ["groq>=0.11", "google-generativeai>=0.7"]
subs = ["faster-whisper>=1.0"]
trends = ["pytrends>=4.9"]
all = [
    "groq>=0.11",
    "google-generativeai>=0.7",
    "faster-whisper>=1.0",
    "pytrends>=4.9",
]

[project.scripts]
morfeus = "morfeus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["morfeus"]

[tool.hatch.build.targets.wheel.force-include]
"morfeus/templates/socrates_skeleton/template.yaml" = "morfeus/templates/socrates_skeleton/template.yaml"
"morfeus/templates/socrates_skeleton/script_demo.json" = "morfeus/templates/socrates_skeleton/script_demo.json"
"morfeus/templates/abuelita_nieto/template.yaml" = "morfeus/templates/abuelita_nieto/template.yaml"
"morfeus/templates/abuelita_nieto/script_demo.json" = "morfeus/templates/abuelita_nieto/script_demo.json"
